React Query Setup

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,7 +55,12 @@
 
     --chart-5: 27 87% 67%;
 
-    --radius: 0.5rem}
+    --radius: 0.5rem;
+  
+    --scrollbar-track: #f1f1f1;
+
+    --scrollbar-thumb: #c1c1c1;
+  }
   .dark {
 
     --background: 240 10% 3.9%;
@@ -104,7 +109,12 @@
 
     --chart-4: 280 65% 60%;
 
-    --chart-5: 340 75% 55%}
+    --chart-5: 340 75% 55%;
+  
+    --scrollbar-track: #292a30;
+
+    --scrollbar-thumb: #17171b;
+  }
 }
 
 
