--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,6 +122,8 @@
 @layer base {
   * {
     @apply border-border;
+    scrollbar-width: thin;
+    scrollbar-color: rgba(255, 255, 255, 0.4) transparent;
   }
   body {
     @apply bg-background text-foreground;
@@ -152,4 +154,29 @@
   ul {
     list-style: inherit;
   }
+  *::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+  
+  *::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0.4);
+    border-radius: 10px;
+    border: 1px solid transparent;
+    background-clip: content-box;
+  }
+  
+  *::-webkit-scrollbar-thumb:hover {
+    background: rgba(255, 255, 255, 0.6);
+    background-clip: content-box;
+  }
+  
+  *::-webkit-scrollbar-corner {
+    background: transparent;
+  }
+
 }
